# PyBloqs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  MANIFEST.in  README.md  circle.yml  deploy_pypi.sh  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: conf.py  index.rst
docs/_static/: .keepme
docs/examples/: __init__.py  examples.html  examples.ipynb  examples.md  examples_corr.csv
docs/source/: conf.py  configuration.ipynb  examples.ipynb  getting_started.rst  index.md  index.rst  installation.md  installation.rst  interactive_plots.ipynb  requirements.txt  server.md  server_demo.py  table_formatting.ipynb  user_guide.md  user_guide.rst  vega_altair.ipynb
docs/source/api/: index.rst
docs/source/developer_guide/: index.md  testing.md  writing_blocks.ipynb
docs/source/getting_started/: first_steps.md  installation.md
docs/source/server/: index.md
docs/tables/: Table Formatter Docs.html  Table Formatter Docs.md
pybloqs/: __init__.py  config.py  email.py  html.py  util.py
pybloqs/block/: altair.py  base.py  code.py  collapsible.py  colors.py  convenience.py  data_tables.py  image.py  layout.py  table.py  table_formatter_builder.py  table_formatters.py  text.py  wrap.py
pybloqs/htmlconv/: __init__.py  chrome_headless.py  html_converter.py  puppeteer.js  wkhtmltox.py
pybloqs/jinja/: table.html
pybloqs/plot/: __init__.py  core.py  extras.py
pybloqs/server/: __init__.py  provider.py
pybloqs/server/block/: __init__.py  life_loading.py  poll.py  refresh.py  select.py  tabs.py
pybloqs/server/static/: __init__.py  htmx.min.js
pybloqs/static/: __init__.py  block-core.js  jquery-dataTables-impl.js  jsinflate.js
pybloqs/static/css/: docutils.css  jquery-dataTables.css
pybloqs/static/css/pybloqs_default/: main.css
pybloqs/static/uncompressed/: block-core.js  highcharts-pybloqs.js  jsinflate.js
quangdv3_pybloqs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quangdv_pybloqs.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  pyproject.toml
tests/integration/: test_base.py  test_convenience.py  test_server.py  test_table.py
tests/integration/generate/: generation_framework.py  test_base.py  test_convenience.py  test_data_tables.py  test_image.py  test_layout.py  test_plot.py  test_plot_df1.csv  test_plot_df2.csv  test_table.py  test_text.py  test_wrap.py
tests/integration/htmlconv/: test_html_converter.py
tests/integration/static/: test_static.py
tests/regression/: README  test_html_output.py  update_all.py
tests/regression/block/: regression_framework.py  test_base.py  test_convenience.py  test_image.py  test_layout.py  test_plot.py  test_plot_df3.csv  test_table.py  test_text.py  test_wrap.py
tests/regression/block/output/: test_base_hrule.html  test_convenience_block.html  (+52 more)
tests/regression/html_output/: code.html  collapsible.html  custom_css.html  custom_js_compressed.html  custom_js_uncompressed.html  empty.html  flow.html  grid.html  hrule.html  hstack.html  markdown.html  nested.html  pre.html  raw.html  span.html  title.html  title_levels.html  vstack.html
tests/regression/pybloqs_input/: code.py  collapsible.py  custom_css.py  custom_js_compressed.py  custom_js_uncompressed.py  empty.py  flow.py  grid.py  hrule.py  hstack.py  markdown.py  nested.py  pre.py  pyproject.toml  raw.py  span.py  title.py  title_levels.py  vstack.py
tests/unit/: test_base_unit.py  test_config.py  test_email.py  test_html.py  test_image_unit.py  test_import.py  test_pickle.py  test_plot_unit.py  test_table.py  test_table_formatters.py
tests/unit/block/: test_base_unit.py  test_email.py  test_image_imports.py  test_image_unit.py  test_table.py  test_table_formatter_builder.py  test_table_formatters.py
tests/unit/plot/: test_plot_init.py  test_plot_unit.py
tests/unit/server/: test_decorator.py  test_provider.py  test_server.py
tests/unit/static/: test_static.py
