[project]
description = "Data Visualization and Report Building"
name = "pybloqs"
version = "1.2.14"
authors = [{ name = "Man Alpha Technology", email = "ManAlphaTech@man.com" }]
keywords = ["ahl", "pdf", "html", "visualization", "report"]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "beautifulsoup4",
  "matplotlib",
  "markdown",
  "html5lib",
  "pandas",
  "docutils",
  "lxml",
  "pyyaml",
  "jinja2",
]
dynamic = ['readme']

[project.optional-dependencies]
docs_and_notebook = [
  "sphinx",
  "nbsphinx",
  "ipython[notebook]",
  "sphinxcontrib-apidoc",
]
plotly = ["plotly", "kaleido"]
bokeh = ["bokeh", "selenium"]
tests = ["mock", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/man-group/pybloqs"

[build-system]
requires = ["setuptools", "pypandoc<1.8", "jsmin"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pybloqs"]

[tool.setuptools.package-data]
"pybloqs.static" = ["*.js", "css/*.css", "css/pybloqs_default/main.css"]
"pybloqs.jinja" = ["table.html"]
"pybloqs.htmlconv" = ["*.js"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "COM",
  "C4",
  "E",
  "F",
  "G",
  "I",
  "LOG",
  "PT",
  "Q",
  "RSE",
  "RUF",
  "SIM",
  "T20",
  "UP",
  "W",
]
ignore = ["COM812", "E731", "PT011", "SIM108"]
