[project]
description = "Data Visualization and Report Building"
name = "pybloqs"
requires-python = ">= 3.8"
authors = [{ name = "Man Alpha Technology", email = "ManAlphaTech@man.com" }]
keywords = ["ahl", "pdf", "html", "visualization", "report"]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4",
    "matplotlib",
    "markdown",
    "html5lib",
    "pandas",
    "docutils",
    "lxml",
    "pyyaml",
    "jinja2",
]
dynamic = ['version']

[project.optional-dependencies]
docs_and_notebook = [
    "sphinx",
    "nbsphinx",
    "ipython[notebook]",
    "sphinxcontrib-apidoc",
]
plotly = ["plotly", "kaleido"]
bokeh = ["bokeh", "selenium"]
tests = ["mock", "pytest", "pytest-cov"]
altair = ["altair"]
server = ["Flask"]
code = ["pygments"]

[project.urls]
Homepage = "https://github.com/man-group/pybloqs"
Repository = "https://github.com/man-group/pybloqs"
Documentation = "https://pybloqsmain.readthedocs.io/en/latest/"
Changelog = "https://github.com/man-group/PyBloqs/blob/master/CHANGES.md"

[build-system]
requires = ["setuptools", "jsmin", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["node_modules", "logo", "wkhtmltox"]

[tool.setuptools.package-data]
"pybloqs.static" = ["*.js", "css/*.css", "css/pybloqs_default/main.css"]
"pybloqs.jinja" = ["table.html"]
"pybloqs.htmlconv" = ["*.js"]
"pybloqs.server.static" = ["*.js"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ANN2",
    "COM",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "LOG",
    "PT",
    "Q",
    "RSE",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = ["COM812", "E731", "PT011", "SIM108", "UP006", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/regression/pybloqs_input/*" = ["F821"]
